src/test/run-pass/associated-types-resolve-lifetime.rs
// Copyright 2014 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

trait Get<T> {
    fn get(&self) -> T;
}

trait Trait<'a> {
    type T: 'static;
    type U: Get<&'a int>;

    fn dummy(&'a self) { }
}

fn main() {}
